--- a/site/css/index.css
+++ b/site/css/index.css
@@ -7,4 +7,23 @@
     
   }
   
- 
+  .overlay {
+    left: 0;
+    position: fixed; 
+    bottom: 0; 
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1; 
+    width: 100%;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  
+  .europe:hover .overlay {
+    opacity: 1;
+  }
