--- a/site/css/index.css
+++ b/site/css/index.css
@@ -27,3 +27,153 @@
   .europe:hover .overlay {
     opacity: 1;
   }
+
+  body{background-color: white;}
+li {display: inline;}
+
+a#logo {margin-left:45%;
+    display: inline;
+    
+}
+
+img {
+	max-width: 100%;
+	
+}
+
+#headerlinks {
+  width: 50%;
+  height: 65px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-right: 5vw;
+}
+
+  a#inscrire {
+    text-decoration: none;
+    padding: 10px;
+    font-family: arial;
+    font-size: 1em;
+    color: #FFFFFF;
+    background-color: #b2a2c7;
+    border-radius: 24px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    border: 4px solid #FFFFFF;
+    box-shadow: 3px 3px 14px #444444;
+    -webkit-box-shadow: 3px 3px 14px #444444;
+    -moz-box-shadow: 3px 3px 14px #444444;
+  }
+      
+      
+  a#inscrire:hover {
+    padding: 10px;
+    background-color: #3f3151;
+    box-shadow: 1px 1px 4px #777777;
+    -webkit-box-shadow: 1px 1px 4px #777777;
+    -moz-box-shadow: 1px 1px 4px #777777;
+  }
+  
+      
+  a#connexion {
+    text-decoration: none;
+    padding: 10px;
+    font-family: arial;
+    font-size: 1em;
+    color: #FFFFFF;
+    background-color: #b2a2c7;
+    border-radius: 24px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    border: 4px solid #FFFFFF;
+    box-shadow: 3px 3px 14px #444444;
+    -webkit-box-shadow: 3px 3px 14px #444444;
+    -moz-box-shadow: 3px 3px 14px #444444;
+  }
+  
+  
+  a#connexion:hover {
+    padding: 10px;
+    background-color: #3f3151;
+    box-shadow: 1px 1px 4px #777777;
+    -webkit-box-shadow: 1px 1px 4px #777777;
+    -moz-box-shadow: 1px 1px 4px #777777;
+  }
+  
+  a#barre1 {
+    text-decoration: none;
+    padding: 10px;
+    font-family: arial;
+    font-size: 1em;
+    color: #FFFFFF;
+    background-color: #b2a2c7;
+  }
+        
+        
+  a#barre1:hover {
+    padding: 10px;
+    background-color: #3f3151;
+  }
+  
+        
+  a#barre2 {
+    text-decoration: none;
+    padding: 10px;
+    font-family: arial;
+    font-size: 1em;
+    color: #FFFFFF;
+    background-color:#b2a2c7;
+  }
+        
+        
+  a#barre2:hover {
+    padding: 10px;
+    background-color: #3f3151;
+  }    
+
+  div#basdepage {
+    border-radius: 10px;
+    background-color: rgb(77, 77, 77);
+    color: white;
+    text-align: center;
+    padding: 20px;
+    text-decoration: none;
+  }
+
+  #top{/* total copie colle de W3School*/
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    width: 4%;
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #555 ; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 5px; /* Some padding */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 1px; /* Increase font size */
+    }
+  #top:hover{
+    background-color:red; /* Add a dark-grey background on hover */
+  }
+
+  h1#titre{
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size: 50px;
+    letter-spacing: 0px;
+    word-spacing: 0px;
+    color: #FF0000;
+    font-weight: 700;
+    text-decoration: underline solid rgb(255, 0, 0);
+    font-style: normal;
+    font-variant: small-caps;
+    text-transform: none;
+  }
+  
