--- a/site/css/index.css
+++ b/site/css/index.css
@@ -1,15 +1,53 @@
 
 
-  .monde{
-    width: 100%;
-    fill: grey;
-    stroke: currentColor;
-    
-  }
+.monde{
+  width: 100%;
+  fill: grey;
+  stroke: currentColor;
+  
+}
   
 
+.overlay {
+  left: 0;
+  position: fixed; 
+  top: 0; 
+  background: rgba(0, 0, 0, 0.9);
+  color: #f1f1f1; 
+  width: 100%;
+  transition: .5s ease;
+  display:none;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+  
+  
+.overlay:hover  {
+  opacity: 1;
+}
 
-  body{background-color: white;}
+#top{/* total copie colle de W3School*/
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  width: 4%;
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #555 ; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 5px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 1px; /* Increase font size */
+  }
+#top:hover{
+  background-color:red; /* Add a dark-grey background on hover */
+}
+body{background-color: white;}
 li {display: inline;}
 
 a#logo {margin-left:45%;
